--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 Linux System Administrator<br>
                 hammadkamran777@gmail.com<br>
                 +92 333 3225330<br>
-                <a href="https://www.linkedin.com/in/hammad-kamran-123456789/">Hammad Kamran | LinkedIn</a>
+                <a href="www.linkedin.com/in/hammad-kamran-faruki">Hammad Kamran | LinkedIn</a>
             </p>
         </div>
         <div class="section">
@@ -96,7 +96,6 @@
         <div class="section">
             <h2>Academic Qualification:</h2>
             <ul>
-                <li>Bachelor in Business Administration | University of Lahore</li>
                 <li>Diploma in Cloud Cyber Security | Al Nafi (Completed, Nov 2022 - Dec 2023)</li>
             </ul>
         </div>
@@ -124,33 +123,6 @@
             </div>
         </div>
         <div class="section">
-            <h2>Internship Experience:</h2>
-            <p>
-                This letter certifies that Mr. Hammad Kamran has successfully completed his unpaid internship program with us at Al-Nafi E-Learning Pvt. Ltd (www.alnafi.com) for 1 year. During the period of his engagement, from November 2022 to December 2023, he has displayed an exemplary commitment to learning and growth.
-            </p>
-            <p>
-                Throughout his internship, he demonstrated keen interest and competency in a wide range of subjects and disciplines. He completed several training courses, expanding his knowledge base and acquiring practical skills that will undoubtedly prove valuable in his future endeavors.
-            </p>
-            <p>
-                He undertook various courses including Linkedin Course and IELTS Training, Linux, and Python Deep Dive, which equipped him with the skills to navigate the professional world effectively. His intense focus on the CISSP, RHEL Intensive, and SysOps was evident. Moreover, his completion of Ethical Hacking, Incident Response Management, and CIS Top 20 Controls demonstrated his commitment to understanding and preventing security risks. His interest in ICS Security 101, SCADA, ISO 27019:2017, and NIST 800-82 connection, reflects his commitment to the broader aspects of security in a technological environment.
-            </p>
-            <p>
-                Furthermore, he showed his understanding of the importance of data in the modern world, evidenced by his completion of the Learn Data Science Using Python course. His ability identify, assess, and address vulnerabilities was displayed through his completion of the Vulnerability Assessment, Web Application Pentesting, and Ethical Hacking courses along with WSTG-LABS. His commitment to mastering foundational mathematical concepts was demonstrated through his completion of Linear Algebra, Probability, Statistics, and Calculus courses. Lastly, his completion of the ISO 27001, 27017, 27018, Lead Implementer and Auditor course shows his understanding of the importance of international standards in information security management.
-            </p>
-            <p>
-                His dedication, commitment, and hands-on approach during this internship have been commendable. We are confident that the knowledge and skills he has gained during his training with us will serve him well in his future professional endeavors.
-            </p>
-            <p>Regards,</p>
-            <p>Suaira Tariq Mahmood</p>
-            <p>Manager Quality Assurance Academic Systems, Al Nafi</p>
-            <p>+92 21 349g 1214</p>
-            <p>+92 304 111 0400</p>
-            <p>info@alnafi.com</p>
-            <p><a href="http://www.alnafi.com">www.alnafi.com</a></p>
-            <p>Pakistan: A-163, BIock 13-C,</p>
-            <p>Gulshan-e-lgbal, Karachi.</p>
-        </div>
-        <div class="section">
             <h2>Skills and Expertise:</h2>
             <ul>
                 <li>OWASP, SANS, CIS, CSET</li>
@@ -168,4 +140,3 @@
     </div>
 </body>
 </html>
-
