--- a/index.html
+++ b/index.html
@@ -3,62 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hammad Kamran Faruki - CV</title>
+    <title>Hammad Kamran Faruki's CV</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 0;
-            background: #f4f4f9;
-            color: #333;
+            padding: 20px;
+            background-color: #f4f4f4;
         }
         .container {
-            width: 80%;
-            margin: 0 auto;
+            max-width: 800px;
+            margin: auto;
             background: #fff;
             padding: 20px;
+            border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .header {
-            background: #3a3f51;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
+        h1, h2, h3 {
+            color: #333;
         }
-        .header h1 {
-            margin: 0;
-            font-size: 36px;
+        .header {
+            border-bottom: 2px solid #333;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+        .header p {
+            margin: 5px 0;
+        }
+        .header .contact-info a {
+            color: #333;
+            text-decoration: none;
+        }
+        .header .contact-info a:hover {
+            text-decoration: underline;
         }
         .section {
             margin-bottom: 20px;
-            padding: 20px;
         }
-        h2 {
-            font-size: 24px;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #3a3f51;
+        .section h2 {
+            border-bottom: 2px solid #333;
             padding-bottom: 5px;
+            margin-bottom: 10px;
         }
-        p {
-            margin: 5px 0;
+        .section ul {
+            list-style: none;
+            padding: 0;
         }
-        .contact-info a {
-            color: #3a3f51;
-            text-decoration: none;
-        }
-        .contact-info a:hover {
-            text-decoration: underline;
-        }
-        .responsibilities ul {
-            list-style-type: disc;
-            margin: 0;
-            padding-left: 20px;
-        }
-        .skills ul {
-            list-style-type: square;
-            margin: 0;
-            padding-left: 20px;
+        .section ul li {
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -66,75 +59,64 @@
     <div class="container">
         <div class="header">
             <h1>Hammad Kamran Faruki</h1>
-            <p class="contact-info">
-                Linux System Administrator<br>
-                hammadkamran777@gmail.com<br>
-                +92 333 3225330<br>
-                <a href="www.linkedin.com/in/hammad-kamran-faruki">Hammad Kamran | LinkedIn</a>
-            </p>
-        </div>
-        <div class="section">
-            <h2>Career Objective:</h2>
-            <p>
-                Hands-on professional work experience, excel at tackling various challenges and thrive in an environment where every day I come to work with an attitude on what issues I can solve in line with business requirements. To me, business requirements dictate security, compliance, GRC, and all other key stakeholders' requirements. I am looking for an opportunity that can further fuel my curiosity and assist me in expanding my expertise as Linux System Administrator, DevOps Engineer, and technical tidbits in solving business problems.
-            </p>
-        </div>
-        <div class="section">
-            <h2>Professional Education & Trainings:</h2>
-            <ul>
-                <li>CISSP (Certified Information Systems Security Professional)</li>
-                <li>ISO Lead Implementer & Auditor 27001, 27002, 27017, 27018</li>
-                <li>CIS Top 20 Controls Implementation</li>
-                <li>SIEM a Hands-On Approach In Line With Various Frameworks and Standards</li>
-                <li>Vulnerability Assessment In Line With Various Frameworks and Standards</li>
-                <li>Web Application Penetration Testing In Line With Various Frameworks and Standards</li>
-                <li>Network Penetration Testing In Line With Various Frameworks and Standards</li>
-                <li>WSTG (Web Security Testing Guide) HOA</li>
-                <li>Linux RHEL Intensive Boot Camp</li>
-            </ul>
-        </div>
-        <div class="section">
-            <h2>Academic Qualification:</h2>
-            <ul>
-                <li>Diploma in Cloud Cyber Security | Al Nafi (Completed, Nov 2022 - Dec 2023)</li>
-            </ul>
-        </div>
-        <div class="section">
-            <h2>Professional Work Qualification:</h2>
-            <h3>Linux System Administrator</h3>
-            <div class="responsibilities">
-                <ul>
-                    <li>Assess and perform systems utilization and headroom reports to assist in troubleshooting and performance tuning.</li>
-                    <li>Monitor the status of critical system services, reporting performance and server health. Develop mutually beneficial working relationships with customers.</li>
-                    <li>Assisting with analysis, evaluation, and preparation of recommendations for system improvements, optimization, development, and maintenance efforts.</li>
-                    <li>Proficiency in installing, configuring, patching, troubleshooting, securing, diagnosing & repairing hardware.</li>
-                    <li>Installing, configuring, and managing network switches, load balancers, console servers, and other network devices.</li>
-                    <li>Infrastructure includes hardware, operating systems, database management systems, networks, and security.</li>
-                    <li>Experience as a systems administrator with administering user accounts, performing server subsystem configuration, network management, software installation, backups, configuration management, and general system maintenance.</li>
-                    <li>Build and maintain automation systems to reduce the time for builds and deployments and to enable the team to scale its output exponentially over time.</li>
-                    <li>Monitor backups and disaster recovery, including backup verification and performing restoration tests, and participating in disaster recovery drills.</li>
-                    <li>Install, configure, update and troubleshoot services for customers such as OS-level concerns, web servers, database servers, applications servers, and mail; including Apache, FTP, SSH, and DNS.</li>
-                    <li>Extensive experience in Linux Security and IPTABLEs.</li>
-                    <li>Analyze server and storage characteristics (e.g., CPU behavior, latency, transmission speeds, packet loss, and throughput), triage, and troubleshoot problems.</li>
-                    <li>Accurate documentation of symptoms, actions, follow-up items, and scheduling to include ticketing systems, turnover logs, knowledge articles, reports, configuration changes, etc.</li>
-                    <li>Administers security policies to control access to systems. Performs complex security control activities to prevent hackers from infiltrating campus information. Maintains complex security systems for servers, firewalls, and switches.</li>
-                    <li>Knowledge of fundamental concepts of distributed, complex enterprise deployments: networking, communication protocols, VLANs, multi-tiered environments, virtualization technologies, storage, hypervisors, routing, monitoring, storage connectivity, capacity planning, file systems, backups, load balancing, firewalls.</li>
-                </ul>
+            <div class="contact-info">
+                <p>Phone: <a href="tel:+923127269761">+92 312 7269761</a></p>
+                <p>Email: <a href="mailto:hammadkamran777@gmail.com">hammadkamran777@gmail.com</a></p>
+                <p>Location: Gujrat, Pakistan</p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/hammad-kamran-faruki">www.linkedin.com/in/hammad-kamran-faruki</a></p>
+                <p>GitHub: <a href="https://github.com/hammad-kamran">https://github.com/hammad-kamran</a></p>
             </div>
         </div>
         <div class="section">
-            <h2>Skills and Expertise:</h2>
+            <h2>Professional Summary</h2>
+            <p>I am an enthusiastic DevOps Engineer with a solid foundation in DevOps principles and hands-on experience with essential tools and technologies. My focus is on streamlining processes, enhancing system reliability, and ensuring smooth deployment and integration.</p>
+        </div>
+        <div class="section">
+            <h2>Professional Experience</h2>
+            <h3>Associate DevOps Engineer</h3>
+            <p><strong>OpsOura</strong></p>
+            <p><strong>June 2024 – Present</strong></p>
             <ul>
-                <li>OWASP, SANS, CIS, CSET</li>
-                <li>Sniper, Wireshark, Nmap, Snort, Metasploit, W3af, Maltego, Nikto</li>
-                <li>Windows / Linux OS / RHEL Enterprise, CentOS, Parrot OS, Ubuntu</li>
-                <li>Python, Bash Scripting, Nagios, Zabbix</li>
-                <li>Linux Server Administration</li>
-                <li>RPM and YUM Package Management</li>
-                <li>User and Group Management</li>
-                <li>Server Configuration (FTP, WEB, NFS, SAMBA, etc.)</li>
-                <li>File System Management and Backup Tools</li>
-                <li>LVM (Logical Volume Manager)</li>
+                <li>Environment Management: Implemented and managed containerized applications using Docker, improving deployment efficiency and scalability.</li>
+                <li>Automation: Developed and maintained CI/CD pipelines using Jenkins and GitLab CI, reducing manual intervention and accelerating the release process.</li>
+                <li>Monitoring and Logging: Set up and configured monitoring tools such as Prometheus and Grafana to ensure system reliability and performance.</li>
+                <li>Collaboration: Worked closely with development and operations teams to streamline workflows, resolve issues, and enhance system performance.</li>
+                <li>Security: Applied security best practices in DevOps processes, including vulnerability scanning and implementing secure coding standards.</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Skills and Tools</h2>
+            <ul>
+                <li>Containerization and Orchestration: Docker, Podman, Kubernetes</li>
+                <li>CI/CD Pipelines: Jenkins, GitLab CI, GitHub Actions, CircleCI</li>
+                <li>Configuration Management: Ansible, CloudFormation</li>
+                <li>Version Control Systems: Git, GitHub, GitLab</li>
+                <li>Monitoring & Visualization: Prometheus, Grafana</li>
+                <li>Search & Analytics: Elasticsearch, Kibana, Metricbeat</li>
+                <li>Scripting & Automation: Bash, Crontab</li>
+                <li>Cloud Platforms: AWS, Azure</li>
+                <li>Operating Platforms: Linux, Windows (WSL)</li>
+                <li>Programming Languages: Python, JavaScript</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Education</h2>
+            <ul>
+                <li><strong>Al Nafi | EduQual</strong> - Diploma in DevOps and Cloud Advancement (May 2024 - Present)</li>
+                <li><strong>Diploma in Cloud Cyber Security, Cloud Computing</strong></li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Certifications</h2>
+            <ul>
+                <li><strong>Certificate in CCNA</strong> - Adan IT Center, 2024</li>
+                <li>Acquired knowledge in networking fundamentals, routing and switching, and network security</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Languages</h2>
+            <ul>
+                <li>Proficient in English, Urdu</li>
             </ul>
         </div>
     </div>
