--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
     <div class="responsibilities">
         <ul>
             <li>Oversee the integration of security best practices within DevOps processes.</li>
-            <li>Collaborate with development, operations, and security teams to automate security measures and safeguard cloud infrastructure.</li>
-            <li>Streamline CI/CD pipelines while ensuring security remains a priority.</li>
+            <li>Utilized Azure services like Azure Functions, Azure Storage, and Azure App Services to develop and deploy cloud-based solutions, ensuring efficient and secure operations.</li>
+            <li>Managed Azure resources and configured security policies to protect sensitive data, ensuring GDPR, HIPAA, and SOC 2 compliance.</li>
+            <li>Streamlined CI/CD pipelines using Azure DevOps, integrating automated security checks, vulnerability scanning, and continuous testing before deployment.</li>
             <li>Maintain smooth operations and continuously drive improvements in security posture.</li>
             <li>Mentor the team and align efforts with business objectives to reduce risk and enhance operational efficiency.</li>
         </ul>
@@ -125,12 +126,12 @@
         <div class="section">
             <h2>Skills and Expertise</h2>
             <ul>
-                <li>DevOps Tools: Jenkins, GitLab CI, GitHub Actions, CircleCI, Helm, Kubernetes</li>
+                <li>DevOps Tools: Jenkins, GitLab CI, GitHub Actions, CircleCI, Helm</li>
                 <li>Cloud Platforms: AWS, Azure</li>
                 <li>Containerization & Orchestration: Docker, Kubernetes</li>
                 <li>Configuration Management: Ansible</li>
                 <li>Scripting & Automation: Python, Bash</li>
-                <li>System Administration: Linux (RHEL, Ubuntu, CentOS), Windows</li>
+                <li>System Administration: Linux (RHEL, Ubuntu, CentOS, Rocky Linux, AlmaLinux), Windows</li>
                 <li>Networking & Security: Network configuration, Firewalls (IPTABLES), Security hardening</li>
                 <li>Server Configuration: FTP, Apache, Nginx, NFS</li>
             </ul>
