--- a/index.html
+++ b/index.html
@@ -87,11 +87,15 @@
     <div class="responsibilities">
         <ul>
             <li>Oversee the integration of security best practices within DevOps processes.</li>
-            <li>Utilized Azure services like Azure Functions, Azure Storage, and Azure App Services to develop and deploy cloud-based solutions, ensuring efficient and secure operations.</li>
-            <li>Managed Azure resources and configured security policies to protect sensitive data, ensuring GDPR, HIPAA, and SOC 2 compliance.</li>
-            <li>Streamlined CI/CD pipelines using Azure DevOps, integrating automated security checks, vulnerability scanning, and continuous testing before deployment.</li>
+            <li>Conducted R&D on GDPR, HIPAA, PCI-DSS, and SOC 2 compliance, ensuring best practices are integrated into our systems.</li>
+            <li>Configured and deployed Wazuh for monitoring and security management, optimizing its performance for real-time threat detection and response.</li>
+            <li>Implemented HTTPS on Wazuh to ensure secure communications and protect sensitive data, adhering to compliance requirements.</li>
+            <li>Utilized Azure services like Azure Functions, Azure Storage, and Azure App Services, integrating them into CI/CD pipelines for efficient cloud deployment using GitHub Actions.</li>
+            <li>Streamlined CI/CD pipelines using GitHub Actions, integrating automated security checks, vulnerability scanning, and continuous testing before deployment.</li>
             <li>Maintain smooth operations and continuously drive improvements in security posture.</li>
             <li>Mentor the team and align efforts with business objectives to reduce risk and enhance operational efficiency.</li>
+    </ul>
+    </ul>
         </ul>
     </div>
     
@@ -102,8 +106,6 @@
             <li>CI/CD Pipelines: Designed, built, and maintained continuous integration and delivery pipelines, enhancing automation and scalability.</li>
             <li>System Management: Managed Linux systems, including installation, configuration, patching, and security hardening.</li>
             <li>Network Configuration: Installed, configured, and managed network devices such as switches, load balancers, and firewalls.</li>
-            <li>Backup & Recovery: Oversaw backup processes, disaster recovery strategies, and conducted restoration tests.</li>
-            <li>Service Management: Installed and configured web servers (Apache), database servers (MySQL), and application servers (SSH, DNS, FTP).</li>
             <li>Security Practices: Implemented Linux security measures, including firewall management (IPTABLES) and access controls.</li>
             <li>Monitoring & Logging: Utilized ELK Stack (Elasticsearch, Logstash, Kibana) for logging and analytics.</li>
             <li>Performance Monitoring: Employed tools like Prometheus and Grafana to monitor infrastructure performance.</li>
