--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <h3>DevOps Engineer (Team Lead DevSecOps) | OpsOura (Oct 2024 - Present)</h3>
     <div class="responsibilities">
         <ul>
-            <li>Oversee the integration of security best practices within DevOps processes.</li>
+            <li>Implemented security best practices within DevOps processes, focusing on secure coding practices and automated security testing.</li>
             <li>Conducted R&D on GDPR, HIPAA, PCI-DSS, and SOC 2 compliance, ensuring best practices are integrated into our systems.</li>
             <li>Configured and deployed Wazuh for monitoring and security management, optimizing its performance for real-time threat detection and response.</li>
             <li>Implemented HTTPS on Wazuh to ensure secure communications and protect sensitive data, adhering to compliance requirements.</li>
