--- a/index.html
+++ b/index.html
@@ -102,14 +102,16 @@
     <h3>Associate DevOps Engineer | OpsOura (Jun 2024 - Oct 2024)</h3>
     <div class="responsibilities">
         <ul>
-            <li>Infrastructure Optimization: Conducted performance tuning and troubleshooting to ensure high availability and efficiency.</li>
-            <li>CI/CD Pipelines: Designed, built, and maintained continuous integration and delivery pipelines, enhancing automation and scalability.</li>
-            <li>System Management: Managed Linux systems, including installation, configuration, patching, and security hardening.</li>
-            <li>Network Configuration: Installed, configured, and managed network devices such as switches, load balancers, and firewalls.</li>
-            <li>Security Practices: Implemented Linux security measures, including firewall management (IPTABLES) and access controls.</li>
-            <li>Monitoring & Logging: Utilized ELK Stack (Elasticsearch, Logstash, Kibana) for logging and analytics.</li>
-            <li>Performance Monitoring: Employed tools like Prometheus and Grafana to monitor infrastructure performance.</li>
-            <li>Documentation: Maintained accurate documentation of system configurations and incidents.</li>
+            <li>Designed, built, and maintained CI/CD pipelines using GitHub Actions and CircleCI, automating code testing, build processes, and deployment to ensure scalability and reduce manual efforts.</li>
+            <li>Managed Linux systems with responsibilities including installation, configuration, patching, and scripting with Bash to automate maintenance tasks and optimize performance.</li>
+            <li>Configured Docker and Kubernetes (K8s, K3s) for container orchestration and deployed applications, ensuring high availability and reliability of microservices.</li>
+            <li>Implemented network configurations by installing and managing devices such as switches, load balancers, and firewalls to maintain secure and efficient network operations.</li>
+            <li>Enhanced system security through Linux-based security measures, including firewall management using IPTABLES, and enforcing strict access controls.</li>
+            <li>Established a centralized logging and analytics system using the ELK Stack (Elasticsearch, Logstash, Kibana), improving visibility into application and system logs for proactive monitoring.</li>
+            <li>Employed Prometheus and Grafana to monitor infrastructure performance, track key metrics, and set up alerting for system health and performance issues.</li>
+            <li>Utilized Docker Harbor and Docker Private Registry to secure, manage, and distribute Docker images across environments, enhancing container deployment consistency.</li>
+            <li>Automated routine tasks and scheduled jobs with Crontab (Cronjobs), streamlining operational efficiency and reducing manual interventions.</li>
+            <li>Maintained detailed documentation of system configurations, network setups, CI/CD workflows, and incidents to facilitate troubleshooting and knowledge sharing across teams.</li>
         </ul>
     </div>
     
