--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <li>Conducted R&D on GDPR, HIPAA, PCI-DSS, and SOC 2 compliance, ensuring best practices are integrated into our systems.</li>
             <li>Configured and deployed Wazuh for monitoring and security management, optimizing its performance for real-time threat detection and response.</li>
             <li>Utilized Azure services like Azure Functions, Azure Storage, and Azure App Services, integrating them into CI/CD pipelines for efficient cloud deployment using GitHub Actions.</li>
-            <li>Architected and deployed secure static websites on Google Cloud Platform (GCP), leveraging Cloud Storage, Load Balancer, and CDN with HTTPS and custom domains. Automated infrastructure provisioning using Terraform and streamlined CI/CD pipelines with Cloud Build for testing and deployment.</li>+
+            <li>Architected and deployed secure static websites on Google Cloud Platform (GCP), leveraging Cloud Storage, Load Balancer, and CDN with HTTPS and custom domains. Automated infrastructure provisioning using Terraform and streamlined CI/CD pipelines with Cloud Build for testing and deployment.</li>
             <li>Streamlined CI/CD pipelines using GitHub Actions, integrating automated security checks, vulnerability scanning, and continuous testing before deployment.</li>
             <li>Maintain smooth operations and continuously drive improvements in security posture.</li>
             <li>Mentor the team and align efforts with business objectives to reduce risk and enhance operational efficiency.</li>
@@ -160,7 +160,7 @@
         <div class="section">
             <h2>Academic Qualification</h2>
             <ul>
-                <li>Diploma in DevOps and Cloud Advancement | Al Nafi (May 2024 - Present</li>
+                <li>Diploma in DevOps and Cloud Advancement | Al Nafi (May 2024 - Present)</li>
                 <li>Diploma in Cloud Cyber Security | Al Nafi (Nov 2022 - Dec 2023)</li>
             </ul>
         </div>
